--- a/vuetify-pwa-firebase-python-template/package.json
+++ b/vuetify-pwa-firebase-python-template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "home-dapp",
+  "name": "vuetify-pwa-firebase-python-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,24 +9,22 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6",
-    "vuetify": "^2.2.11",
+    "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
     "@vue/cli-plugin-eslint": "^4.2.0",
-    "@vue/cli-plugin-vuex": "^4.2.3",
+    "@vue/cli-plugin-pwa": "^4.2.0",
+    "@vue/cli-plugin-router": "^4.2.0",
+    "@vue/cli-plugin-vuex": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "^2.0.5",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
