Corrected makefile. Backend is now launched on port 8080 as per instructions of Firebase. Python backend hosting on firebase must be on port 8080. Docker compose fixed accordingly. Added axios to dependencies. Removed firebase script links from index.html, as they don't seem needed because we have python backend.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,7 @@
 FROM tiangolo/uvicorn-gunicorn:python3.7
 
+ENV PORT 8080
 
-RUN pip install fastapi pyrebase
+RUN pip install fastapi pyrebase firebase-admin
 
 COPY ./app /app
